RRDTOOL NEWS
============
Major Changes between 1.2.x and 1.3.x

Graphing
--------
* libart has been replaced by cairo/pango
* pango markup is supported
* full gridfitting

RRDTOOL NEWS
============
Major Changes between 1.0.x and 1.2.x

Graphing
--------

* rewritten graphics generation based on libart.
  - anti-aliased output
  - alpha transparency support
  - truetype fonts
 
* additional graphics formats: EPS, PDF, SVG

* extended multi-part documentation

* VDEF support; define and use variables.  Find, and use, the
  maximum rate seen by rrdtool; compute and show the average

* Sliding window (trend) analysis
  Compute a smoother average, for instance over the last 6 CDPs

* percentile (95th or other)
  Remove peaks, 95 percent of all rates are at or below the
  returned value

Logging
-------
* a second logging interface: rrdtool updatev
  Verbose updating of the database; show CPDs being created

* Aberrant Behavior Detection with Holt-Winters Forecasting
  Compare current data with expected data, detect and log when
  the rates are outside expected levels

* COMPUTE data type for artificial data-sources calculating their
  input using RPN math and data from the other data-sources.
 
Incompatibilities
-----------------
* Colons in COMMENT arguments to rrdtool graph must be escaped with a backslash

* the --alt-y-mrtg option is gone or rather since 1.2.7 it is back but
  without functionality.

* In pipe mode, rrdtool answers with OK only if it was successful with the
  command. Otherwhise the answer will be ERROR...


Behind the Scenes
-----------------
* In order to support Holt-Winters and Calculated Datasources,
  the rrdtool data format has changed. While the new version of rrdtool can
  read files created with rrdtool 1.0.x. It is not possible to read files
  created by rrdtool-1.2.x with rrdtool-1.0.x

* External libraries are not included with rrdtool anymore. This is in line